update profile page layout

--- a/index.html
+++ b/index.html
@@ -3,31 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>โปรไฟล์ส่วนตัว</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f9f9f9;
+            padding: 40px;
+        }
+
+        img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin: 20px 0;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        li {
+            margin: 5px 0;
+        }
+
+        a {
+            color: #e91e63;
+            text-decoration: none;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
 
     <h1>กาญจนาวดี เพชรโชติ</h1>
 
-    <img src="profile1.png" alt="">
+    <img src="profile1.png" alt="รูปโปรไฟล์">
 
     <p>
-        สวัสดีค่ะ ชื่อกาญจนาวดี เพชรโชติ ชื่อเล่น เบนซ์ อายุ 20 ปี 
-ปัจจุบันกำลังศึกษาระดับปริญญาตรีสาขาเทคโนโลยีสารสนเทศ
-    </p>
-
-    <h2>ความสนใจ / งานอดิเรก</h2>
-    <ul>
-        <li>เขียนเว็บไซต์ ออกแบบกราฟิก</li>
-        <li>เล่นกีฬา</li>
-        <li>ฟังเพลง</li>
-    </ul>
-
-    <p>
-        เว็บไซต์ที่ชื่นชอบ:
-        <a href="https://www.youtube.com" target="">
-            Youtube
-        </a>
-    </p>
-
-</body>
-</html>
+        สวัสดีค่ะ ชื่อ <strong>กาญจนาวดี เพชรโชติ</strong><br>
+        ชื่อเล่น <em>เบนซ์</em> อายุ 20 ปี<br>
+        ปัจจุบันกำลังศึกษ
