--- a/index.html
+++ b/index.html
@@ -45,4 +45,27 @@
     <p>
         สวัสดีค่ะ ชื่อ <strong>กาญจนาวดี เพชรโชติ</strong><br>
         ชื่อเล่น <em>เบนซ์</em> อายุ 20 ปี<br>
-        ปัจจุบันกำลังศึกษ
+        ปัจจุบันกำลังศึกษาระดับปริญญาตรี
+        สาขาเทคโนโลยีสารสนเทศ
+    </p>
+
+    <h2>ความสนใจ / งานอดิเรก</h2>
+    <ul>
+        <li>เขียนเว็บไซต์ และออกแบบกราฟิก</li>
+        <li>เล่นกีฬา</li>
+        <li>ฟังเพลง</li>
+    </ul>
+
+    <h2>ข้อมูลติดต่อ</h2>
+    <ul>
+        <li>Email: kanjanawadee@email.com</li>
+        <li>โทร: 0XX-XXX-XXXX</li>
+    </ul>
+
+    <p>
+        เว็บไซต์ที่ชื่นชอบ:
+        <a href="https://www.youtube.com" target="_blank">YouTube</a>
+    </p>
+
+</body>
+</html>
